portal/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elevok-portal
  namespace: elevok-portal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: elevok-portal
  template:
    metadata:
      labels:
        app: elevok-portal
    spec:
      containers:
        - name: elevok-container
          image: git.diktup.cloud:5050/sifca/sifca-monorepo:elevok-portal-prod-1.0
          #imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          #imagePullPolicy: Never
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: gitlab-registry-secret
