portal/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elevok-portal-service
  namespace: elevok-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: elevok-portal
