portal/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-res
  namespace: elevok-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: elevok.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: elevok-portal-service
                port:
                  number: 80
